We need to move to the next record during mail merge. (fdo#32790)

I believe this code change was unintentional.  We shouldn't be
skipping MoveResultSet call or else all the emails would be sent to
the first person unintentionally. ;-)