sw/source/ui/dbui/mmoutputpage.cxx
@@ -1207,9 +1207,9 @@ IMPL_LINK(SwMailMergeOutputPage, SendDocumentsHdl_Impl, PushButton*, pButton)
 
 #ifdef DBG_UTIL
         sal_Int32 nTarget =
-                rConfigItem.MoveResultSet(rInfo.nDBRow);
-        OSL_ENSURE( nTarget == rInfo.nDBRow, "row of current document could not be selected");
 #endif
+            rConfigItem.MoveResultSet(rInfo.nDBRow);
+        OSL_ENSURE( nTarget == rInfo.nDBRow, "row of current document could not be selected");
         OSL_ENSURE( sEMailColumn.Len(), "No email column selected");
         ::rtl::OUString sEMail = lcl_GetColumnValueOf(sEMailColumn, xColAccess);
         SwMailDescriptor aDesc;
